--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,7 +48,10 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
-
+  assets:
+    - assets/images/
+    #- assets/images/2.0x/lia.jpg
+    #- assets/images/3.0x/lia.jpg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
